<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/changePwBg"
            android:layout_width="550dp"
            android:layout_height="854dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.336"
            app:srcCompat="@drawable/login_back" />

        <ImageView
            android:id="@+id/changePwIcon"
            android:layout_width="0dp"
            android:layout_height="391dp"
            android:foregroundGravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/pwLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.308"
            app:srcCompat="@drawable/icon" />

        <LinearLayout
            android:id="@+id/pwLinearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="220dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/change_hint"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/change_pw"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/change_phone"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/input_phone"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/change_pwd"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/input_pwd"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/change_pwd_again"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/input_pwd_again"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_change"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/check" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>